Step6: Risks set

--- a/templates/formular/pf6.html
+++ b/templates/formular/pf6.html
@@ -77,6 +77,7 @@ function initOnload(step,callback) {
 			setValue('id_form_delivrable_'+i+'-cycle',0);
 			setValue('id_form_delivrable_'+i+'-storage',0);
 			setValue('id_form_delivrable_'+i+'-tape',0);
+			setValue('id_form_delivrable_'+i+'-risk',0);
 			var j = 0;
 			var doc2 = sessionStorage.getItem('5-id_form_delivrable_'+i+'-HR_'+j+'-member');
 			while(doc2 != undefined){
