--- a/templates/formular/pf6.html
+++ b/templates/formular/pf6.html
@@ -66,7 +66,7 @@ Content layout for step 6.
 function initOnload(step,callback) {
 	addMembers();
 	var i = 1;
-	var doc = sessionStorage.getItem("5-id_form_delivrable_1-number");
+	var doc = sessionStorage.getItem("5-id_form_delivrable_1-date");
 	if(doc == undefined){
 		addMore('delivrable');
 	} else {
@@ -77,7 +77,7 @@ function initOnload(step,callback) {
 			setValue('id_form_delivrable_'+i+'-cycle',0);
 			setValue('id_form_delivrable_'+i+'-storage',0);
 			setValue('id_form_delivrable_'+i+'-tape',0);
-			setValue('id_form_delivrable_'+i+'-risk',0);
+			setValue('id_form_delivrable_'+i+'-risk');
 			var j = 0;
 			var doc2 = sessionStorage.getItem('5-id_form_delivrable_'+i+'-HR_'+j+'-member');
 			while(doc2 != undefined){
@@ -96,7 +96,7 @@ function initOnload(step,callback) {
 				doc2 = sessionStorage.getItem('5-id_form_delivrable_'+i+'-HR_'+j+'-member');
 			}
 			i++;
-			doc = sessionStorage.getItem('5-id_form_delivrable_'+i+'-number');
+			doc = sessionStorage.getItem('5-id_form_delivrable_'+i+'-date');
 		}
 		updateRessources('cycle');
 		updateRessources('storage');
@@ -139,7 +139,7 @@ function addMore(where){
 		}
 	
 		var form_idx = parseInt(document.getElementById('id_form_'+where+'-TOTAL_FORMS').value);
-		var inH = '<select id="id_form_'+where+'_'+form_idx+'-member" onclick="document.getElementById(this.id+\'-old\').value=this.value;" onchange="updatePM(this.value,document.getElementById(this.id+\'-old\').value);" style="width:180px">'+people+'</select><span style="padding-left:40px;"><input type="hidden" id="id_form_'+where+'_'+form_idx+'-member-old"><select id="id_form_'+where+'_'+form_idx+'-role" style="width:120px">'+role+'</select><span style="padding-left:40px;"><input id="id_form_'+where+'_'+form_idx+'-pm" type="number" min="0" step="0.1" onchange="updatePM(this.parentNode.getElementsByTagName(\'select\')[0].value,null);" style="width:100px"><span style="padding-left:40px;"><input id="id_form_'+where+'_'+form_idx+'-description" type="text" maxlength="150" style="width:200px"><br />';
+		var inH = '<select id="id_form_'+where+'_'+form_idx+'-member" onclick="document.getElementById(this.id+\'-old\').value=this.value;" onchange="updatePM(this.value,document.getElementById(this.id+\'-old\').value);" style="width:180px">'+people+'</select><span style="padding-left:40px;"></span><input type="hidden" id="id_form_'+where+'_'+form_idx+'-member-old" value=""><select id="id_form_'+where+'_'+form_idx+'-role" style="width:120px">'+role+'</select><span style="padding-left:40px;"></span><input id="id_form_'+where+'_'+form_idx+'-pm" type="number" min="0" step="0.1" onchange="updatePM(this.parentNode.getElementsByTagName(\'select\')[0].value,null);" style="width:100px"><span style="padding-left:40px;"></span><input id="id_form_'+where+'_'+form_idx+'-description" type="text" maxlength="150" style="width:200px"><br />';
 		
 		var newD = document.createElement('div');
 		newD.innerHTML= inH;
@@ -154,7 +154,7 @@ function addMore(where){
 		inH += '<div style="padding-bottom:10px;"><label style="padding-right:120px;">Date</label><label>Description</label> (max. 150 characters)<br />';
 		inH += '<input id="id_form_delivrable_'+form_idx+'-date" type="date" style="height:21px; width:120px;vertical-align:top"><span style="padding-left:28px;"></span><textarea id="id_form_delivrable_'+form_idx+'-description" maxlength="150" rows="1" cols="79"></textarea></div><br />';
 		inH += '<div style="padding-bottom:10px;"><label style="padding-right:195px;">Core hours</label><label style="padding-right:158px;">Disk storage(TB)</label><label>Tape storage(TB)</label><br />';
-		inH += '<input id="id_form_delivrable_'+form_idx+'-cycle" type="number" min="0" onchange="updateRessources(\'cycle\')" style="width:200px"><span style="padding-left:60px;"><input id="id_form_delivrable_'+form_idx+'-storage" type="number" min="0" onchange="updateRessources(\'storage\')" style="width:200px"><span style="padding-left:60px;"><input id="id_form_delivrable_'+form_idx+'-tape" type="number" min="0" onchange="updateRessources(\'tape\')" style="width:200px"></div><br />';
+		inH += '<input id="id_form_delivrable_'+form_idx+'-cycle" type="number" min="0" onchange="updateRessources(\'cycle\')" style="width:200px"><span style="padding-left:60px;"></span><input id="id_form_delivrable_'+form_idx+'-storage" type="number" min="0" onchange="updateRessources(\'storage\')" style="width:200px"><span style="padding-left:60px;"></span><input id="id_form_delivrable_'+form_idx+'-tape" type="number" min="0" onchange="updateRessources(\'tape\')" style="width:200px"></div><br />';
 		inH += '<div style="padding-bottom:10px;"><label >Risks</label> (max. 150 characters)<br />';
 		inH += '<textarea id="id_form_delivrable_'+form_idx+'-risk" maxlength="150" rows="1" cols="100" placeholder="External Dependency, ..."></textarea></div>';
 		inH += '<div id="delivrable_'+form_idx+'-HR"><label style="padding-right:175px;">Member</label><label style="padding-right:130px;">Role</label><label style="padding-right:53px;">Person/Month</label><label>Description</label></div><input type="button" value="Add More" onclick="addMore(\'delivrable_'+form_idx+'-HR\')"><hr /><br />';
@@ -217,7 +217,7 @@ function updatePM(name,old){
 		tmp = document.getElementById('id_form_delivrable_'+i+'-HR_0-member');
 	}
 	document.getElementById(name).value = total;
-	if(old!=null && old!=undefined ){
+	if(old!=null && old!=undefined && old!="" ){
 		updatePM(old,null);
 	}
 	updateTotal();
