--- a/templates/formular/pf6.html
+++ b/templates/formular/pf6.html
@@ -166,7 +166,10 @@ function addMore(where){
 		//inH += '<div style="padding-bottom:10px;"><label style="padding-right:195px;">Core hours</label><label style="padding-right:158px;">Disk storage(TB)</label><label>Tape storage(TB)</label><br />';
 		//inH += '<input id="id_form_delivrable_'+form_idx+'-cycle" type="number" min="0" onchange="updateRessources(\'cycle\')" style="width:200px"><span style="padding-left:60px;"></span><input id="id_form_delivrable_'+form_idx+'-storage" type="number" min="0" onchange="updateRessources(\'storage\')" style="width:200px"><span style="padding-left:60px;"></span><input id="id_form_delivrable_'+form_idx+'-tape" type="number" min="0" onchange="updateRessources(\'tape\')" style="width:200px"></div><br />';
 		
-		inH += '<div style="padding-left:5px; padding-bottom:10px;"><input type="checkbox" name="type" value="production" id="id_form_delivrable_'+form_idx+'-type_prod" onchange="closeOpen(\'id_form_delivrable_'+form_idx+'-type_prod\')"> <label>Production</label><br>';
+		inH += '<table border="0" cellpadding="0" cellspacing="0" width="100%" style="padding-bottom:10px;">';
+		inH += '<td style="width:32%; vertical-align:top">';
+		
+		inH += '<div><input type="checkbox" name="type" value="production" id="id_form_delivrable_'+form_idx+'-type_prod" onchange="closeOpen(\'id_form_delivrable_'+form_idx+'-type_prod\')"> <label>Production</label><br>';
 		inH += '<div style="padding-left:5px; display:none"><label>Preferred platform:</label><br />';
 		inH += '<div style="padding-left:5px;"><input type="checkbox" name="platform" value="x86" id="id_form_delivrable_'+form_idx+'-type_prod-plat_x86"> x86<br />';
 		inH += '<input type="checkbox" name="platform" value="BGQ" id="id_form_delivrable_'+form_idx+'-type_prod-plat_bgq"> Blue Gene/Q<br />';
@@ -185,8 +188,52 @@ function addMore(where){
 		inH += '<div style="padding-left:5px; display:none">Number of artefacts <br /><input type="number" id="id_form_delivrable_'+form_idx+'-type_prod_stor_arte" min="0"><br />';
 		inH += 'Average size of artefacts (in GB) <br /><input type="number" id="id_form_delivrable_'+form_idx+'-type_prod_stor_size" min="0"></div></div></div></div></div><br />';
 		
+		inH += '</td><td style="width:1%; vertical-align:top"></td><td style="width:1%; vertical-align:top;border-left:1px solid #EEEEEE;"></td>';
+		inH += '<td style="width:32%; vertical-align:top">';
 		
+		inH += '<div><input type="checkbox" name="type" value="testuction" id="id_form_delivrable_'+form_idx+'-type_test" onchange="closeOpen(\'id_form_delivrable_'+form_idx+'-type_test\')"> <label>Testing</label><br>';
+		inH += '<div style="padding-left:5px; display:none"><label>Preferred platform:</label><br />';
+		inH += '<div style="padding-left:5px;"><input type="checkbox" name="platform" value="x86" id="id_form_delivrable_'+form_idx+'-type_test-plat_x86"> x86<br />';
+		inH += '<input type="checkbox" name="platform" value="BGQ" id="id_form_delivrable_'+form_idx+'-type_test-plat_bgq"> Blue Gene/Q<br />';
+		inH += '<input type="checkbox" name="platform" value="GPU" id="id_form_delivrable_'+form_idx+'-type_test-plat_gpu"> GPU<br /></div>';
 		
+		inH += '<label>Preferred hardware interface:</label><br />';
+		inH += '<div style="padding-left:5px;"><input type="checkbox" name="hardware" value="x86" id="id_form_delivrable_'+form_idx+'-type_test-hard_vh"> Virtualized hardware<br />';
+		inH += '<input type="checkbox" name="hardware" value="BGQ" id="id_form_delivrable_'+form_idx+'-type_test-hard_dh"> Direct hardware<br /></div>';
+		
+		inH += '<div><input type="checkbox" name="type" value="computing" id="id_form_delivrable_'+form_idx+'-type_test_comp" onchange="closeOpen(\'id_form_delivrable_'+form_idx+'-type_test_comp\')"> <label>Computing</label><br>';
+		inH += '<div style="padding-left:5px; display:none">Total number of runs <br /><input type="number" id="id_form_delivrable_'+form_idx+'-type_test_comp_runs" min="0"><br />';
+		inH += 'Average partition size (Number of processors) <br /><input type="number" id="id_form_delivrable_'+form_idx+'-type_test_comp_partition" min="0"><br />';
+		inH += 'Time to solution (In hours) <br /><input type="number" id="id_form_delivrable_'+form_idx+'-type_test_comp_time" min="0"></div></div>';
+		
+		inH += '<div><input type="checkbox" name="type" value="strorage" id="id_form_delivrable_'+form_idx+'-type_test_stor" onchange="closeOpen(\'id_form_delivrable_'+form_idx+'-type_test_stor\')"> <label>Storage</label><br>';
+		inH += '<div style="padding-left:5px; display:none">Number of artefacts <br /><input type="number" id="id_form_delivrable_'+form_idx+'-type_test_stor_arte" min="0"><br />';
+		inH += 'Average size of artefacts (in GB) <br /><input type="number" id="id_form_delivrable_'+form_idx+'-type_test_stor_size" min="0"></div></div></div></div></div><br />';
+		
+		inH += '</td><td style="width:1%; vertical-align:top"></td><td style="width:1%; vertical-align:top;border-left:1px solid #EEEEEE;"></td>';
+		
+		inH += '<td style="width:32%; vertical-align:top">';
+		
+		inH += '<div><input type="checkbox" name="type" value="devluction" id="id_form_delivrable_'+form_idx+'-type_devl" onchange="closeOpen(\'id_form_delivrable_'+form_idx+'-type_devl\')"> <label>Development</label><br>';
+		inH += '<div style="padding-left:5px; display:none"><label>Preferred platform:</label><br />';
+		inH += '<div style="padding-left:5px;"><input type="checkbox" name="platform" value="x86" id="id_form_delivrable_'+form_idx+'-type_devl-plat_x86"> x86<br />';
+		inH += '<input type="checkbox" name="platform" value="BGQ" id="id_form_delivrable_'+form_idx+'-type_devl-plat_bgq"> Blue Gene/Q<br />';
+		inH += '<input type="checkbox" name="platform" value="GPU" id="id_form_delivrable_'+form_idx+'-type_devl-plat_gpu"> GPU<br /></div>';
+		
+		inH += '<label>Preferred hardware interface:</label><br />';
+		inH += '<div style="padding-left:5px;"><input type="checkbox" name="hardware" value="x86" id="id_form_delivrable_'+form_idx+'-type_devl-hard_vh"> Virtualized hardware<br />';
+		inH += '<input type="checkbox" name="hardware" value="BGQ" id="id_form_delivrable_'+form_idx+'-type_devl-hard_dh"> Direct hardware<br /></div>';
+		
+		inH += '<div><input type="checkbox" name="type" value="computing" id="id_form_delivrable_'+form_idx+'-type_devl_comp" onchange="closeOpen(\'id_form_delivrable_'+form_idx+'-type_devl_comp\')"> <label>Computing</label><br>';
+		inH += '<div style="padding-left:5px; display:none">Total number of runs <br /><input type="number" id="id_form_delivrable_'+form_idx+'-type_devl_comp_runs" min="0"><br />';
+		inH += 'Average partition size (Number of processors) <br /><input type="number" id="id_form_delivrable_'+form_idx+'-type_devl_comp_partition" min="0"><br />';
+		inH += 'Time to solution (In hours) <br /><input type="number" id="id_form_delivrable_'+form_idx+'-type_devl_comp_time" min="0"></div></div>';
+		
+		inH += '<div><input type="checkbox" name="type" value="strorage" id="id_form_delivrable_'+form_idx+'-type_devl_stor" onchange="closeOpen(\'id_form_delivrable_'+form_idx+'-type_devl_stor\')"> <label>Storage</label><br>';
+		inH += '<div style="padding-left:5px; display:none">Number of artefacts <br /><input type="number" id="id_form_delivrable_'+form_idx+'-type_devl_stor_arte" min="0"><br />';
+		inH += 'Average size of artefacts (in GB) <br /><input type="number" id="id_form_delivrable_'+form_idx+'-type_devl_stor_size" min="0"></div></div></div></div></div><br />';
+		
+		inH += '</td></table>';
 /*		
 		Preferred platform: x86, Blue Gene/Q, GPU (Users should be able to   select multiple choices)
     Preferred hardware interface: Virtualized hardware, Direct hardware (Users should be able to   select multiple choices)
